[package]
name = "optiengine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "High-performance optimization engine with Rust core and Python bindings"
repository = "https://github.com/programmerH-UX/optiengine"
readme = "README.md"

exclude = [
    "/target",
    "/.venv",
    "/.github",
    "/tests",
    "/examples",
    "/docs",
    "*.log",
    "*.zip",
    "*.tar.gz",
]

include = [
    "Cargo.toml",
    "Cargo.lock",
    "src/**",
    "README.md",
    "LICENSE*"
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[features]
default = []
pro = []

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
once_cell = "1.19"
ed25519-dalek = "2"
base64 = "0.21"
serde_json = "1"
chrono = "0.4"
rand = "0.8"
